--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: rgb(40, 102, 4);
-    color: rgb(57, 82, 41);
+    color: rgb(0, 0, 0);
     padding: 10px;
     font-family: arial;
 }
@@ -20,7 +20,7 @@ nav {
 h1 {
     display: flex;
     align-items: center;
-    color: rgba(0, 0, 0, 0.89);
+    color: rgba(17, 32, 2, 0.89);
     flex: 1;
     margin: 0;
 }
@@ -79,7 +79,7 @@ h2, h3 {
 }
 
 #portfolio li:hover {
-    backgound: #eee;
+    background-color: #f8f8f8;
 }
 
 #portfolio a {
